tests/test_if/test10.wacc
# if condition type mismatch

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  if (((!true)) == ((('c')) != ('d'))) then
    skip 
  else 
    skip
  fi
end
